cluster/manifests/reporting-server/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reporting-server
  labels:
    name: reporting-server
    pod-security.kubernetes.io/enforce: restricted
