cluster/manifests/reporting-server/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: reporting-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: reporting-server
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
