cluster/manifests/reporting-server/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: reporting-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - reporting-server.minikube.127.0.0.1.nip.io
        - reporting-server.kaidotio.dev
        - reporting-server-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
